update docker-compose.yml and run-tests.sh